--- a/frontend/src/pages/form/form.scss
+++ b/frontend/src/pages/form/form.scss
@@ -1,21 +1,69 @@
 .main{
+  
   .intro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     opacity: 1;
+
+    .form-character{
+      height: 350px;
+    }
+
     .form-title{
       color: #00bcd4;
+      font-weight: 900;
     }
-    .vamos-la{
-      background-color: rgb(41, 41, 41);
+
+    .vamos-la {
+      position: relative; /* necessário pro pseudo-elemento ficar dentro */
+      background-color: rgb(15, 15, 15);
       color: white;
-      padding: 10px 25px;
       border: none;
+      padding: 10px 25px;
+      font-weight: 900;
+      font-size: 1.1rem;
       border-radius: 25px;
-      font-weight:900;
-      font-size: 18px;
       cursor: pointer;
-      &:hover{
-        transition: 0.3s all ease-in-out;
-        background-color: #00bcd4;
+      margin-top: 25px;
+      overflow: hidden; /* pra esconder o brilho quando ele sai do botão */
+      transition: background-color 0.4s ease, transform 0.4s ease;
+
+      &:hover {
+        background: linear-gradient(to right, rgb(20, 20, 20), rgb(40, 40, 40), rgb(51, 51, 51));
+        transform: translateY(-2px);
+        transform: scale(110%);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -75%; /* começa fora da esquerda */
+        width: 50%;
+        height: 100%;
+        background: linear-gradient(
+          120deg,
+          transparent,
+          rgba(211, 211, 211, 0.4),
+          transparent
+        );
+        transform: skewX(-25deg);        
+      }
+
+      &:hover::before {
+        animation: shine 0.5s forwards;
+      }
+    }
+    
+    @keyframes shine {
+      0% {
+        left: -75%;
+      }
+      100% {
+        left: 125%; /* passa totalmente pra direita */
       }
     }
   }
