--- a/frontend/src/components/form/form.scss
+++ b/frontend/src/components/form/form.scss
@@ -12,14 +12,17 @@
     .opcoes {
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 18px;
       margin-bottom: 15px;
   
       .opcao {
+        display: flex;
         background: #1a1a1a;
+        width: 700px;
         padding: 10px 20px;
         border-radius: 12px;
         cursor: pointer;
+        overflow: hidden;
         transition: background 0.3s;
   
         input {
@@ -27,7 +30,44 @@
         }
   
         &:hover {
-          background: #2c2c2c;
+          background: linear-gradient(
+          to right,
+          rgb(20, 20, 20),
+          rgb(40, 40, 40),
+          rgb(51, 51, 51)
+        );
+        transition: 0.3s all ease-in-out;
+        transform: scale(1.05) translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        &::before{
+          content: "";
+          position: absolute;
+          top: 0;
+          left: -75%; /* começa fora da esquerda */
+          width: 50%;
+          height: 100%;
+          background: linear-gradient(
+            120deg,
+            transparent,
+            rgba(211, 211, 211, 0.4),
+            transparent
+          );
+          transform: skewX(-25deg);
+        }
+
+        &:hover::before{
+          animation: shine 0.5s forwards;
+        }
+
+        @keyframes shine{
+          0% {
+            left: -75%;
+          }
+          100% {
+            left: 125%;
+          }
         }
       }
     }
@@ -41,6 +81,8 @@
     button {
       background: cyan;
       border: none;
+      font-size: 18px;
+      margin-top: 15px;
       padding: 10px 25px;
       border-radius: 25px;
       font-weight: bold;
@@ -48,7 +90,7 @@
       transition: background 0.3s;
   
       &:hover {
-        background: #00bcd4;
+        background: #00aec5;
       }
     }
   }
