--- a/frontend/src/components/NavBar/navBar.scss
+++ b/frontend/src/components/NavBar/navBar.scss
@@ -1,88 +1,185 @@
-.navbar{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    align-items: center;
-    max-height: 200px; 
-    min-width: 100%;
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  max-height: 200px;
+  min-width: 100%;
+  padding: 0;
+
+  border-bottom: 3px solid white;
+  background-color: black;
+
+  @media (max-width: 768px) {
+    height: 150px;
+  }
+
+  .imglogodiv {
+    width: 275px;
     padding: 0;
-  
-    border-bottom: 3px solid white;
-    background-color: black;
-  
-    @media (max-width:768px) {
-      height: 150px;
-    }
 
-    .imglogodiv{
-      width: 275px;
-      padding: 0;
+    .navbar__brand {
+      img {
+        background: none;
+        height: 100px;
+        width: 275px;
+        border-radius: 140px;
+        transition: transform 0.3s ease-in-out;
 
-      .navbar__brand{
-        img{
-          background: none;
+        &:hover {
+          transform: scale(1.05);
+        }
+
+        @media (max-width: 768px) {
+          margin-top: 25px;
           height: 100px;
-          width: 275px;
-          border-radius: 140px;
-          transition: 0.3s all ease-in-out;
-
-          &:hover{
-            transform: scale(105%);
-          }
-
-          @media (max-width:768px) {
-            margin-top: 25px;
-            height: 100px;
-          }
         }
       }
-    }   
-  
-    .navbar__inner{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        height: 150px;
-        gap: 15px;
-        width:100%;
+    }
+  }
 
-        @media (max-width:768px) {
-          flex-direction: row;
+  .navbar__inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 150px;
+    gap: 15px;
+    width: 100%;
+
+    @media (max-width: 768px) {
+      flex-direction: row;
+    }
+
+    .navbar__nav-and-search {
+      display: flex;
+      align-items: center;
+      flex-direction: row-reverse;
+      gap: 100px;
+
+      .navbar__home-container {
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: 150px;
+        background-color: white;
+        border-top: 1px solid black;
+        border-radius: 15px;
+        transition: border-radius 0.5s ease, background-color 0.3s ease;
+
+        &.open {
+          border-bottom-left-radius: 0;
+          border-bottom-right-radius: 0;
+          background-color: rgb(216, 216, 216);
         }
 
-        .navbar__nav-and-search {
+        &:hover {
+          background-color: rgb(216, 216, 216);
+        }
+
+        .navbar__home {
+          border-radius: 25px;
+          width: 100%;
+          color: black;
+          transition: color 0.2s ease, box-shadow 0.2s ease;
+          text-decoration: none;
+          padding: 0.5rem;
+          font-weight: bold;
+          position: relative;
+          overflow: hidden;
+
+          &:hover {
+            text-decoration: underline;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+          }
+
+          &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: -75%;
+            width: 50%;
+            height: 100%;
+            background: linear-gradient(
+              120deg,
+              transparent,
+              rgba(211, 211, 211, 0.4),
+              transparent
+            );
+            transform: skewX(-25deg);
+          }
+
+          &:hover::before {
+            animation: shine 0.5s forwards;
+          }
+        }
+
+        .navbar__dropdown-button {
+          background: white;
+          border: none;
+          border-radius: 45px;
+          border-left: 1px solid black;
+          color: black;
+          font-size: 1rem;
+          cursor: pointer;
+          padding: 0.5rem;
+          margin: 0;
+          transition: background-color 0.3s ease;
+
+          &:hover {
+            background-color: rgb(216, 216, 216);
+          }
+        }
+
+        .navbar__navlist {
+          background-color: white;
+          border-radius: 0px 0px 15px 15px;
+          list-style: none;
+          padding: 8px 0 0 0;
+          margin: 0;
+          position: absolute;
+          top: 100%;
+          left: 0;
           display: flex;
-          align-items: center;
-          flex-direction: row-reverse;
-          gap: 100px;
+          flex-direction: column;
+          gap: 0.5rem;
+          opacity: 0;
+          visibility: hidden;
+          transform: translateY(-10px);
+          transition: opacity 0.4s ease, transform 0.4s ease, visibility 0s linear 0.4s;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-          .navbar__home-container {
-            position: relative;
-            display: flex;
-            align-items: center;
-            background-color: white;
-            border-radius: 25px;
+          &.navbar__navlist--visible {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+            transition: opacity 0.4s ease 0.2s, transform 0.4s ease 0.2s, visibility 0s linear 0.2s;
+          }
 
-            &:hover{
-              background-color: rgb(216, 216, 216);
+          li {
+            .ult{
+              border-radius: 0 0 15px 15px;
+
+              &:hover{
+                border: none;
+              }
             }
-
-            .navbar__home {
-              background-color: none;
-              border-radius: 25px;
-              width: 100%;
+            .navlink {
+              border-bottom: 3px solid rgb(184, 176, 176);
               color: black;
-              transition: all 0.2s ease-in-out;
+              transition: background-color 0.2s ease, transform 0.2s ease, border-radius 0.1s ease;
               text-decoration: none;
-              padding: 0.5rem;
-              font-weight: bold;
+              display: block;
+              padding: 5px 0 5px 5px;
+              width: 145px;
               position: relative;
               overflow: hidden;
 
-              &:hover{
+              &:hover {
+                background-color: rgb(203, 203, 203);
                 text-decoration: underline;
-                transform: scale(105%);
+                text-decoration-color: rgb(119, 111, 111);
+                transform: translateY(-5px) translateX(1px);
                 box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
               }
 
@@ -96,7 +193,7 @@
                 background: linear-gradient(
                   120deg,
                   transparent,
-                  rgba(211, 211, 211, 0.4),
+                  rgba(100, 100, 100, 0.4),
                   transparent
                 );
                 transform: skewX(-25deg);
@@ -106,160 +203,82 @@
                 animation: shine 0.5s forwards;
               }
             }
-
-            .navbar__dropdown-button {
-              background: white;
-              border: none;
-              border-radius: 45px;
-              border-left: 1px solid black;
-              color: black;
-              font-size: 1rem;
-              cursor: pointer;
-              padding: 0.5rem;
-              margin: 0;
-              transition: all 0.2s ease-in-out;
-
-              &:hover {
-                background-color: rgb(216, 216, 216);
-              }
-            }
-
-            .navbar__navlist {
-              list-style: none;
-              padding: 0;
-              margin: 0;
-              position: absolute;
-              top: 100%;
-              left: 0;
-              display: flex;
-              flex-direction: column;
-              gap: 0.5rem;
-              opacity: 0;
-              visibility: hidden;
-              transition: opacity 0.3s ease, visibility 0.3s ease;
-
-
-              padding: 8px 0px 0px 0px;
-              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-              &.navbar__navlist--visible {
-                opacity: 1;
-                visibility: visible;
-              }
-
-              li {
-                .navlink{
-                  background-color: white;
-                  border-radius: 25px;
-                  color: black;
-                  transition: all 0.2s ease-in-out;
-                  text-decoration: none;
-                  display: block;
-                  padding: 5px 0px 5px 5px;
-                  width: 88px;
-                  position: relative;
-                  overflow: hidden;
-
-                  &:hover{
-                    background-color: rgb(203, 203, 203);
-                    text-decoration: underline;
-                    transform: scale(105%);
-                    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-                  }
-
-                  &::before {
-                    content: "";
-                    position: absolute;
-                    top: 0;
-                    left: -75%;
-                    width: 50%;
-                    height: 100%;
-                    background: linear-gradient(
-                      120deg,
-                      transparent,
-                      rgba(100, 100, 100, 0.4),
-                      transparent
-                    );
-                    transform: skewX(-25deg);
-                  }
-
-                  &:hover::before {
-                    animation: shine 0.5s forwards;
-                  }
-                }
-              }
-
-              @media (max-width: 768px) {
-                display: none;
-              }
-            }
           }
+        }
 
-          .navbar__search{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: white;
-            width: 450px;
-            border-radius: 20px;
-      
-            @media (max-width:768px) {
-              width: 200px;
-            }
-      
-              .navbar__search-button{
-                height: 35px;
-                width: 25px;
-                border-radius: 20px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background: none;
-                border: none;
-              }
-              .navbar__search-input{
-                color: black;
-                padding-left: 25px;
-                background: none;
-                width: 88%;
-                border-radius: 20px;
-                height: 35px;
-                border: none;
-              }
-          }
+        @media (max-width: 400px) {
+          display: none;
         }
       }
 
-      .navbar__hamburger{
-        display: none;
-          
+      .navbar__search {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        width: 450px;
+        border-radius: 20px;
+
         @media (max-width: 768px) {
-          display: block;
-          justify-content: end;
-          background-color: white;
-          color: black;
-          height: 40px;
-          margin-right: 15px;
-        } 
-      }
-  
-      @media (max-width: 768px) {
-        width: 97vw;
-      }
-  }
-
-  .spacement{
-      @media (max-width:768px) {
-          width: 120px;
+          width: 200px;
         }
-      max-width: 400px;
-    }
 
-  @keyframes shine {
-    0% {
-      left: -75%;
-    }
-    100% {
-      left: 125%;
+        .navbar__search-button {
+          height: 35px;
+          width: 25px;
+          border-radius: 20px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: none;
+          border: none;
+        }
+
+        .navbar__search-input {
+          color: black;
+          padding-left: 25px;
+          background: none;
+          width: 88%;
+          border-radius: 20px;
+          height: 35px;
+          border: none;
+        }
+      }
     }
   }
+
+  .navbar__hamburger {
+    display: none;
+
+    @media (max-width: 768px) {
+      display: block;
+      justify-content: end;
+      background-color: white;
+      color: black;
+      height: 40px;
+      margin-right: 15px;
+      border-radius: 40px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    width: 97vw;
+  }
+}
+
+.spacement {
+  max-width: 400px;
+
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+
+@keyframes shine {
+  0% {
+    left: -75%;
+  }
+  100% {
+    left: 125%;
+  }
+}
