--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     padding: 0;
     margin: 0;
@@ -5,6 +9,12 @@ body{
     min-height: 100vh;
     background-color: black;
     color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    @media (max-width: 400px) {
+        max-width: 400px;
+        overflow-x: hidden;
+    }
 }
 
 #root{
@@ -13,4 +23,9 @@ body{
 
 .main{
     min-height: 50vh;
+
+    @media (max-width: 400px) {
+        max-width: 400px;
+        overflow-x: hidden;
+    }
 }
