--- a/frontend/src/components/Footer/index.scss
+++ b/frontend/src/components/Footer/index.scss
@@ -16,6 +16,10 @@
             font-size: 40px;
             font-weight: bolder;
         }
+
+        &.logged{
+            display: none;
+        }
     }
     .info2{
         display: flex;
