--- a/frontend/src/components/carrossel-form/carrossel.scss
+++ b/frontend/src/components/carrossel-form/carrossel.scss
@@ -55,7 +55,7 @@ body {
 
     .card {
       transition: 0.7s;
-      background-image: url('/img/form-character.png');
+      background-color: #313131;
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -117,6 +117,20 @@ body {
 
     .swiper-button-next {
       right: 35px;
+    }
+
+    .swiper-pagination-bullet{
+      background-color: #313131 !important;
+      opacity: 1;
+      transform: scale(0.9);
+      transition: all 0.3s ease;
+    }
+
+    .swiper-pagination-bullet-active{
+      background-color: rgb(0, 255, 255) !important;
+      opacity: 1;
+      transform: scale(1.3);
+      box-shadow: 0 0 8px rgb(0, 255, 255);
     }
   }
 }
