--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -9,6 +9,7 @@ body{
     min-height: 100vh;
     background-color: black;
     color: white;
+    overflow-x: hidden;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
     @media (max-width: 400px) {
@@ -22,7 +23,7 @@ body{
 }
 
 .main{
-    min-height: 50vh;
+    min-height: 60vh;
 
     @media (max-width: 400px) {
         max-width: 400px;
