--- a/frontend/src/pages/login/login.scss
+++ b/frontend/src/pages/login/login.scss
@@ -1,12 +1,141 @@
-.main{
-  .login-form{
+$cor-fundo: #000;
+$cor-principal: #0ff; 
+$cor-texto: #fff;
+$cor-secundaria: #111;
+$cor-botao: #0ff;
+$cor-hover: #08c;
+
+$fonte-principal: 'Poppins', sans-serif;
+
+.main {
+  text-align: center;
+  width: 60%;
+  margin: 0 auto 4rem auto;
+
+  h2 {
+    margin-bottom: 1rem;
+    color: $cor-texto;
+  }
+
+  .login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.8rem;
+
+    width: 100%;
+
+    input {
+      font-size: 18px;
+      background-color: #111;
+      border: 1px solid #333;
+      border-radius: 20px;
+      width: 97%;
+      height: 30px;
+      padding: 0.6rem 1rem;
+      color: $cor-texto;
+
+      &::placeholder {
+        color: #aaa;
+      }
+
+      &:focus {
+        border-color: $cor-principal;
+        outline: none;
+      }
+    }
+    
+    .butão-submit{
+      margin-top: 1rem;
+      background-color: $cor-botao;
+      color: $cor-fundo;
+      border: none;
+      border-radius: 25px;
+      height: 50px;
+      padding: 0;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        text-decoration: underline;
+        background-color: $cor-hover;
+        color: $cor-texto;
+      }
+    }
+  }
+
+  .logs{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    width: 100%;
+    gap: 100px;
 
-    gap: 1.8rem;
+    .google{
+      display: flex;
+      flex-direction: column;
+      width: 20%;
+      transition: all 0.3s ease-in-out;
+
+      p{
+        margin-bottom: -35px;
+      }
+
+      .btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        gap: 5px;
+        width: 100%;
+        color: #000;
+
+        img{
+          background-color: rgb(255, 255, 255);
+          margin: 1;
+          padding: 5px;
+          height: 20px;
+          border: 1px solid #000;
+          border-radius: 12px;
+          box-shadow: 3px 3px 2px 0px rgba(0, 0, 0, 0.8)
+        }
+
+        p{
+          margin: 0;
+          font-family: Verdana, Geneva, Tahoma, sans-serif;
+          font-size: 16px;
+        }
+      }
+    }
+
+    .butão{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      margin-top: 3rem;
+      background-color: $cor-botao;
+      color: $cor-fundo;
+      border: none;
+      border-radius: 25px;
+      width: 20%;
+      height: 50px;
+      text-decoration: none;
+      padding: 0;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        background-color: $cor-hover;
+        color: $cor-texto;
+        transform: scale(110%);
+        text-decoration: underline;
+        text-decoration-color: white;
+      }
+    }
   }
 }
-
-
