--- a/frontend/src/pages/register/register.scss
+++ b/frontend/src/pages/register/register.scss
@@ -7,7 +7,7 @@ $cor-hover: #08c;
 
 $fonte-principal: 'Poppins', sans-serif;
 
-.cadastro {
+.main {
   text-align: center;
   width: 60%;
   margin: 0 auto 4rem auto;
@@ -44,7 +44,7 @@ $fonte-principal: 'Poppins', sans-serif;
       }
 
       &:open{
-        border-radius: 20px 20px 0 0;
+        border-radius: 20px 20px 0px 0px;
       }
 
       &::placeholder{
@@ -56,6 +56,7 @@ $fonte-principal: 'Poppins', sans-serif;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
       width: 100%;
       gap: 1rem;
 
@@ -64,6 +65,7 @@ $fonte-principal: 'Poppins', sans-serif;
         background-color: #111;
         border: 1px solid #333;
         border-radius: 20px;
+        width: 97%;
         height: 30px;
         padding: 0.6rem 1rem;
         color: $cor-texto;
@@ -76,23 +78,99 @@ $fonte-principal: 'Poppins', sans-serif;
           border-color: $cor-principal;
           outline: none;
         }
-    }
+      }
     }
 
-    button {
+    .butão-submit{
       margin-top: 1rem;
       background-color: $cor-botao;
       color: $cor-fundo;
       border: none;
       border-radius: 25px;
-      padding: 0.7rem;
+      height: 50px;
+      padding: 0;
+      font-size: 18px;
       font-weight: bold;
       cursor: pointer;
-      transition: 0.3s;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        text-decoration: underline;
+        background-color: $cor-hover;
+        color: $cor-texto;
+      }
+    }
+  }
+
+  .logs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    gap: 100px;
+
+    .google{
+      display: flex;
+      flex-direction: column;
+      width: 20%;
+      transition: all 0.3s ease-in-out;
+
+      p{
+        margin-bottom: -35px;
+      }
+
+      .btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        gap: 5px;
+        width: 100%;
+        color: #000;
+
+        img{
+          background-color: rgb(255, 255, 255);
+          margin: 1;
+          padding: 5px;
+          height: 20px;
+          border: 1px solid #000;
+          border-radius: 12px;
+          box-shadow: 3px 3px 2px 0px rgba(0, 0, 0, 0.8)
+        }
+
+        p{
+          margin: 0;
+          font-family: Verdana, Geneva, Tahoma, sans-serif;
+          font-size: 16px;
+        }
+      }
+    }
+
+    .butão{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      margin-top: 3rem;
+      background-color: $cor-botao;
+      color: $cor-fundo;
+      border: none;
+      border-radius: 25px;
+      width: 20%;
+      height: 50px;
+      text-decoration: none;
+      padding: 0;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
 
       &:hover {
         background-color: $cor-hover;
         color: $cor-texto;
+        transform: scale(110%);
+        text-decoration: underline;
+        text-decoration-color: white;
       }
     }
   }
