--- a/frontend/src/pages/curriculo/curriculo.scss
+++ b/frontend/src/pages/curriculo/curriculo.scss
@@ -1,6 +1,99 @@
-.main{
+#main{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    min-height: 60vh;
+
+    .rules{
+        min-height: 400px;
+        min-width: 500px;
+        margin-left: -100px;
+
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: column;
+        ol{
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            li{
+                border-bottom: 2px solid;
+                border-image: linear-gradient(to right, rgb(31, 31, 31), rgb(55, 55, 55)) 10;
+                line-height: 2;
+                padding: 0px 10px;
+                text-align: justify;
+                transition: all ease-in-out 0.4s;
+                border-radius: 10px 10px 0px 0px;
+
+                &:hover{
+                    transform: scale(105%) translateX(20px) translateY(-2px);
+                    background-color: #1f1e1e;
+                    cursor:default;
+                }
+            }
+        }
+    }
+
+    .fakeWord{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 0;
+        margin: 0;
+
+        #word{
+            white-space: normal;
+            overflow-wrap: break-word;
+            min-height: 400px;
+            min-width: 500px;
+            max-width: 500px;
+            background-color: #141414;
+            border-radius: 10px;
+
+            p{
+                font-size: 20px;
+                font-family: 'Times New Roman', Times, serif
+            }
+        }
+
+        #download{
+            margin-top: 1rem;
+            color: black;
+            background-color: #0ff;
+            border: none;
+            border-radius: 25px;
+            height: 30px;
+            padding: 0 10px;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+                text-decoration: underline;
+                background-color: #08c;
+                color: white;
+            }
+        }
+
+        .tooltip-box{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            position: absolute;
+            top: 300px;
+            max-width: 500px;
+            cursor: default;
+            background-color: #1f1e1e;
+
+            .close-btn{
+                cursor: pointer;
+            }
+        }
+    }
+
 }
