--- a/frontend/src/pages/curriculo/curriculo.scss
+++ b/frontend/src/pages/curriculo/curriculo.scss
@@ -52,6 +52,17 @@
             max-width: 500px;
             background-color: #141414;
             border-radius: 10px;
+            position: relative;
+
+            &:empty::before {
+                content: attr(data-placeholder);
+                color: #888;
+                font-style: italic;
+                pointer-events: none;
+                position: absolute;
+                top: 10px;
+                left: 10px;
+            }
 
             p{
                 font-size: 20px;
