--- a/frontend/src/components/NavBar/navBar.scss
+++ b/frontend/src/components/NavBar/navBar.scss
@@ -305,6 +305,17 @@
         color: white;
         text-decoration: none;
         transition: all ease-in-out 0.3s;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        .navbar-profile-photo {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          object-fit: cover;
+          border: 2px solid white;
+        }
 
         &:hover{
           padding: 7px 15px 7px 15px;
