--- a/frontend/src/components/Footer/index.scss
+++ b/frontend/src/components/Footer/index.scss
@@ -29,17 +29,14 @@
 
         width: 100%;
         
-        p{
+        .p{
             font-size:20px;
+            color: white;
+            text-decoration: none;
             transition: all ease-in-out 0.3s;
 
             &:hover{
-                transform: scale(110%);
-                background-color: rgb(43, 43, 43);
                 text-decoration: underline;
-                padding-left: 5px;
-                padding-right: 5px;
-                border-radius: 5px;
             }
         }
 
