--- a/frontend/src/pages/vagas/postVagas.scss
+++ b/frontend/src/pages/vagas/postVagas.scss
@@ -27,7 +27,8 @@
             justify-content: center;
             align-items: center;
 
-            min-width: max-content;
+            min-width: 400px;
+            max-width: 400px;
             background-color: #f9f9f9;
             border: 1px solid #ddd;
             border-radius: 8px;
@@ -58,6 +59,9 @@
                 justify-content: center;
                 align-items: start;
                 flex-direction: column;
+                white-space: normal;
+                word-break: break-all;
+                text-align: start;
                 gap: 15px;
                 padding: 0px 20px 20px 20px;
                 margin: 0px 20px 20px 20px;
