--- a/frontend/src/components/NavBar/navBar.scss
+++ b/frontend/src/components/NavBar/navBar.scss
@@ -158,6 +158,13 @@
           }
 
           li {
+            &.forms{
+              display: none;
+
+              &.loggedUser{
+                display: block;
+              }
+            }
             &.curriculo{
               display: none;
 
