--- a/frontend/src/pages/vagas/postVagas.scss
+++ b/frontend/src/pages/vagas/postVagas.scss
@@ -77,4 +77,84 @@
             }
         }
     }
+
+    .pre-input{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        width: 100%;
+        gap: 1.8rem;
+
+        .input{
+            font-size: 18px;
+            background-color: #111;
+            border: 1px solid #333;
+            border-radius: 20px;
+            width: 80%;
+            height: 30px;
+            padding: 0.6rem 1rem;
+            color: white;
+            transition: all 0.3s ease-in-out;
+        
+            &::placeholder {
+                color: #aaa;
+            }
+        
+            &:focus {
+                border-color: #0ff;
+                outline: none;
+                box-shadow: 0 0 5px rgba(0, 255, 255, 0.5);
+            }
+        
+            &:hover {
+                border-color: #08c;
+            }
+        }
+
+        .btn-postarVagas{
+            margin-top: 1rem;
+            margin-bottom: 2rem;
+            background-color: #0ff;
+            color: black;
+            border: none;
+            border-radius: 25px;
+            height: 40px;
+            width: 25%;
+            padding: 0;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+                text-decoration: underline;
+                background-color: #08c;
+                color: white;
+            }
+        }
+    }
+
+    .btn-showForm{
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        background-color: #0ff;
+        color: black;
+        border: none;
+        border-radius: 25px;
+        height: 40px;
+        width: 25%;
+        padding: 0;
+        font-size: 18px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            text-decoration: underline;
+            background-color: #08c;
+            color: white;
+        }
+    }
 }
